--- a/src/views/home.less
+++ b/src/views/home.less
@@ -10,6 +10,7 @@
         display: block;
         width: 100%;
         height: @header-height;
+        position: fixed;
         z-index: 20;
         box-shadow: 0 2px 1px 1px rgba(100,100,100,.1);
         transition: padding .3s;
@@ -69,6 +70,7 @@
     .body-wrapper {
         position: relative;
         margin: 0;
+        margin-top: @header-height;
         padding: 0;
         display: block;
         width: 100%;
@@ -93,7 +95,8 @@
     &-breadcrumb-con {
         position: fixed;
         width: 100%;
-        height: 22px;
+        display: block;
+        height: 40px;
         padding: 10px 20px 5px 20px;
     }
     &-content-con {
